<resources>
    <!--Application level strings -->
    <string name="app_name">Dosteen</string>

    <!--Searching-->
    <string name="search_hint">Поиск событий</string>

    <!-- Authentication activity -->
    <string name="regHeader">Регистрация</string>
    <string name="logHeader">Вход</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="regButton">Создать</string>
    <string name="logButton">Войти</string>
    <string name="changeToLog">Войти в аккаунт</string>
    <string name="changeToReg">Создать аккаунт</string>
    <string name="passwordConfirm">Подтвердите пароль</string>
    <string name="changeProfileButtonIdle">Редактировать профиль</string>
    <string name="changeProfileButtonChanging">Подтвердить изменения</string>

    <!-- Account fragment -->
    <string name="username_header">Ваше ФИО: </string>
    <string name="username_hint">ФИО</string>

    <string name="aboutMeHeader">О себе: </string>
    <string name="achievements_hint">Спортивные звания, выступления на конференциях, дипломы и др.</string>

    <!-- Event classes values -->
    <string name="sport_value">Sport</string>
    <string name="edu_value">Education</string>
    <string name="buisness_value">Buisness</string>
    <string name="creative_value">Creative</string>

    <!-- Adding and editing event-->
    <string name="addNameHint">Введите название события</string>
    <string name="addClass">Выберите тип события</string>
    <string name="addCityHint">Напишите город события</string>
    <string name="addAdressHint">Введите адрес события</string>
    <string name="addSiteHint">Напишите сайт события(необязательно)</string>
    <string name="addDescriptoinHint">Описание события</string>
    <string-array name="chooseClassArray">
        <item>Спорт</item>
        <item>Образование</item>
        <item>Бизнес</item>
        <item>Творчество</item>
    </string-array>
    <string name="dateBegin">Дата начала</string>
    <string name="dateEnd">Дата окончания</string>

    <!-- Event activity exceptions-->
    <string name ="nameEmptyException">Вы не ввели название события</string>
    <string name = "cityEmptyException">Вы не ввели город события</string>
    <string name = "beginDateEmptyException">Вы не ввели дату начала события</string>
    <string name = "endDateEmptyException">Вы не ввели дату окончания события</string>
    <string name = "addressEmptyException">Вы не ввели адрес события</string>
    <string name = "contactsEmptyException">Вы не указали контакты</string>
    <string name = "descriptionEmptyException">Укажите краткое описание события</string>

    <!-- Show info activity-->
    <string name="showInfoNameHeader">Название:</string>
    <string name="showInfoTypeHeader">Тип события:</string>
    <string name="showInfoCityHeader">Город:</string>
    <string name="showInfoAdressHeader">Адрес:</string>
    <string name="showInfoSiteHeader">Сайт:</string>
    <string name="showInfoDescriptionHeader">Описание:</string>
    <string name = "showInfoContactsHeader">Контакты:</string>
    <string name = "showInfoTimeHeader">Период события:</string>


    <!--Application Nav -->
    <string name="allEventsFragment">Все события</string>
    <string name = "userEventsFragment">Ваши события</string>
    <string name = "accountFragment">Ваш профиль</string>

    <!-- Lists for search-->
    <string name = "searchTypeName">Название</string>
    <string name = "searchTypeCity">Город</string>

    <string name="selectAnyTypeOfEvents">Любой</string>
    <string name="selectSportTypeOfEvents">Спорт</string>
    <string name="selectCreativeTypeOfEvents">Творчество</string>
    <string name="selectBuisnessTypeOfEvents">Бизнес</string>
    <string name="selectEduTypeOfEvents">Образование</string>

    <string name="selectAnyTimeOfEvent">Любое</string>
    <string name="selectConstantTimeOfEvent">Постоянное</string>
    <string name="selectTemporaryTimeOfEvent">Временное</string>
</resources>