<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEventActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_below="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/nameField"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addNameHint"
            />

        <LinearLayout
            android:id="@+id/classContainer"
            android:layout_below="@id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addClass" />

            <Spinner
                android:id="@+id/chooseClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <EditText
            android:layout_below="@id/classContainer"
            android:id="@+id/cityField"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addCityHint"
            />
        <EditText
            android:layout_below="@id/cityField"
            android:id="@+id/adressField"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addAdressHint"
            />
        <EditText
            android:layout_below="@id/adressField"
            android:id="@+id/siteField"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addSiteHint"
            />
        <EditText
            android:layout_below="@id/siteField"
            android:id="@+id/descriptionField"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addDescriptoinHint"
            />
        <RelativeLayout
            android:layout_below="@id/descriptionField"
            android:id="@+id/previewContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/previewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/button"
                android:text="Установить превью"
                android:padding="5dp"
                />
            <ImageView
                android:id="@+id/previewImage"
                android:layout_toRightOf="@id/previewButton"
                android:layout_width="150dp"
                android:layout_height="79dp"/>
        </RelativeLayout>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/applyButton"
            android:background="@color/button"
            android:text="Создать"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/previewContainer"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

</RelativeLayout>