<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowInfoActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:layout_margin="20dp">

        <RelativeLayout
            android:id="@+id/nameContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/nameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showInfoNameHeader"
            android:textSize="@dimen/headers"
            />
        <TextView
            android:id="@+id/name"
            android:textColor="#000"
            android:layout_below="@id/nameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/headers"/>
    </RelativeLayout>
        <RelativeLayout
            android:id="@+id/typeContainer"
            android:layout_below="@id/nameContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/typeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showInfoTypeHeader"
                android:textSize="@dimen/headers"
                />
            <TextView
                android:id="@+id/type"
                android:layout_below="@id/typeHeader"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/headers"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/cityContainer"
            android:layout_below="@id/typeContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/cityHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showInfoCityHeader"
                android:textSize="@dimen/headers"
                />
            <TextView
                android:id="@+id/city"
                android:layout_below="@id/cityHeader"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:layout_height="wrap_content"
                android:textSize="@dimen/headers"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/adressContainer"
            android:layout_below="@id/cityContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/adressHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showInfoAdressHeader"
                android:textSize="@dimen/headers"

                />
            <TextView
                android:id="@+id/adress"
                android:layout_below="@id/adressHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="@dimen/headers"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/siteContainer"
            android:layout_below="@id/adressContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/siteHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showInfoSiteHeader"
                android:textSize="@dimen/headers"
                />
            <TextView
                android:id="@+id/site"
                android:layout_below="@id/siteHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/headers"
                android:textColor="#000"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/descriptionContainer"
            android:layout_below="@id/siteContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/descriptionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showInfoDescriptionHeader"
                android:textSize="@dimen/headers"
                />
            <TextView
                android:id="@+id/description"
                android:layout_below="@id/descriptionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/headers"
                android:textColor="#000"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>