<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/applyProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9e9e9e"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="visible">
            <Button
                android:id="@+id/changeDataBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/changeProfileButtonIdle"
                android:textSize="@dimen/accaunt_fragment"
                android:layout_toLeftOf="@id/cancel_button"
                android:background="@color/button"
                android:layout_marginBottom="20dp"
                />
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:visibility="gone"
            android:textColor="#fff"
            android:text="X"
            android:textSize="@dimen/accaunt_fragment"
            android:background="@color/colorPrimary"
            android:layout_alignParentRight="true"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/changeDataBtn"
        android:layout_marginHorizontal="10dp">
    <RelativeLayout
        android:id="@+id/name_container"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/user_image">
    <RelativeLayout
        android:id="@+id/userImageContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false">
        <ImageView
            android:layout_margin="5dp"
            android:id="@+id/user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/user"
            android:clickable="false"/>
        <ImageView
            android:id="@+id/editImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/edit"
            android:background="#808080"
            android:visibility="gone"
            android:clickable="false"/>
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/user_image"
            android:layout_toRightOf="@id/userImageContainer"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/usernameHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_header"
                android:visibility="visible"
                android:textSize="@dimen/accaunt_fragment"/>
            <TextView
                android:id="@+id/usernameLabel"
                android:layout_below="@id/usernameHeader"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/profileLabels"
                android:visibility="visible"
                android:textSize="@dimen/accaunt_fragment"/>
            <EditText
                android:id="@+id/usernameEdit"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:visibility="gone"
                android:textSize="@dimen/accaunt_fragment"/>

        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/achievementsContainer"
        android:layout_below="@id/name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/achievementsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutMeHeader"
            android:textSize="@dimen/accaunt_fragment"/>
        <TextView
            android:id="@+id/achievementsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/achievementsHeader"
            android:textSize="@dimen/accaunt_fragment"
            android:textColor="@color/profileLabels"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:id="@+id/achievementsEdit"
            android:layout_below="@id/achievementsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/achievements_hint"
            android:textSize="@dimen/accaunt_fragment"
            android:visibility="gone"/>
    </RelativeLayout>
</RelativeLayout>

    </RelativeLayout>
    </RelativeLayout>